--- a/country.html
+++ b/country.html
@@ -38,7 +38,7 @@
                 veritatis corrupti quod minima quo. Atque porro corrupti praesentium culpa tempore? Ipsam.
             </p>
 
-            <button id="btn">TEAM</button>
+            <button id="btn"  onclick=location.href='team.html'>TEAM</button>
         </div>
 
         <!-- this is for main image -->
@@ -79,7 +79,7 @@
             </ol>
         </div>
     </div>
-    
+  
     <script>
         function myFun(image, colour, head, logo) {
             document.getElementById('myimage').src = image;
