--- a/sumarry.html
+++ b/sumarry.html
@@ -25,6 +25,7 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: fixed;
+        
 
         }
 
@@ -32,6 +33,7 @@
             border-collapse: collapse;
             border-radius: 2em;
             overflow: hidden;
+
         }
     </style>
 </head>
@@ -42,86 +44,19 @@
             <img src="images/cricket_logo.png" height="100" width="100" alt="">
         </div>
         <div class="container col-5 rounded-pill ">
-            <table class="table table-dark border border-5  ">
-                <thead>
+            <table class="table table-dark border border-5">
+                <thead id="thead">
                     <tr>
-                        <th scope="col"><img src="images/india_logo.png" height="50" alt=""> VS <img
-                                src="images/p_logo.png" height="50" alt="">
-                        </th>
-                        <th scope="col">MATCH SUMMARY</th>
-                        <th scope="col">20 OVER</th>
-                        <th scope="col"></th>
-                    </tr>
+                    </tr> 
                 </thead>
-                <tbody>
-                    <tr class="table-primary">
-                        <th scope="row">PAKISTAN</th>
-                        <td>20 OVER</td>
-                        <td></td>
-                        <td>140-5</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">MALIK</th>
-                        <td>26</td>
-                        <td>RAINA</td>
-                        <td>1-4</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">SHEZAD</th>
-                        <td>25</td>
-                        <td>JADEJA</td>
-                        <td>1-20</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">U AKMAL</th>
-                        <td>22</td>
-                        <td>NEHRA</td>
-                        <td>1-20</td>
-                    </tr>
-                    <tr class="table-primary">
-                        <th scope="row">INDIA </th>
-                        <td> 18 OVERS</td>
-                        <td></td>
-                        <td>141-4</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">KHOLI
-                        </th>
-                        <td>55*</td>
-                        <td>SAMI</td>
-                        <td>2-17</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">YUVRAJ</th>
-                        <td>24</td>
-                        <td>AMIR</td>
-                        <td>1-11</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">DHONI</th>
-                        <td>13*</td>
-                        <td>WAHAB</td>
-                        <td>1-16</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">SHARMA</th>
-                        <td>10</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr class="table-primary">
-                        <th scope="row">INDIA WON BY 6 WICKETS</th>
-                        <td></td>
-                        <td> </td>
-                        <td></td>
-                    </tr>
+                <tbody id="tbody">
                 </tbody>
             </table>
 
         </div>
     </div>
 
-
+    <script src="summary.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
